--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
-
+        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.zzds.plugin:mygraldeplugin:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,6 +17,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
